# test_assignment_HALOART

./: README.md  pyproject.toml
shoping_cart/api/: filters.py  paginators.py  serializers.py  urls.py  views.py
shoping_cart/products/: admin.py  models.py
shoping_cart/products/migrations/: 0001_initial.py  0002_alter_product_name_alter_tag_name_alter_tag_slug.py
shoping_cart/shoping_cart/: asgi.py  settings.py  urls.py  wsgi.py
